# knowledgr

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Doxyfile  LICENSE.md  README.md  circle.yml
contrib/: colabd.run  knowledgrd.run
doc/: building.md  example_config.ini  exchangequickstart.md  git-guidelines.md  quickstart.md  seednodes.txt  witness_parameters.md
doc/devs/: 2018-08-20-resource-notes.md  Python-Debug-Node.md  api-notes.md  create-operation.md  debug_node_plugin.md  plugin.md  sqrt.md  testing.md
example_plugins/example_api_plugin/: CMakeLists.txt  example_api_plugin.cpp
libraries/chain/: CMakeLists.txt  block_log.cpp  colab_evaluator.cpp  database.cpp  fork_database.cpp  generic_custom_operation_interpreter.cpp  index.cpp  knowledgr_evaluator.cpp  knowledgr_objects.cpp  shared_authority.cpp  smt_evaluator.cpp  transaction_object.cpp  witness_schedule.cpp
libraries/chain/include/colab/chain/: account_object.hpp  block_log.hpp  block_summary_object.hpp  colab_evaluator.hpp  colab_fwd.hpp  colab_object_types.hpp  colab_objects.hpp  comment_object.hpp  custom_operation_interpreter.hpp  database.hpp  database_exceptions.hpp  db_with.hpp  evaluator_registry.hpp  global_property_object.hpp  notifications.hpp  pending_optional_action_object.hpp  shared_authority.hpp  smt_objects.hpp  witness_objects.hpp
libraries/chain/include/colab/chain/smt_objects/: account_balance_object.hpp  nai_pool.hpp  nai_pool_object.hpp  smt_token_object.hpp
libraries/chain/include/colab/chain/util/: asset.hpp  manabar.hpp  rd_setup.hpp  reward.hpp  smt_token.hpp  uint256.hpp
libraries/chain/include/knowledgr/chain/: account_object.hpp  block_log.hpp  block_summary_object.hpp  buffer_type.hpp  comment_object.hpp  compound.hpp  custom_operation_interpreter.hpp  database.hpp  database_exceptions.hpp  db_with.hpp  evaluator.hpp  evaluator_registry.hpp  fork_database.hpp  generic_custom_operation_interpreter.hpp  global_property_object.hpp  hardfork_property_object.hpp  history_object.hpp  index.hpp  knowledgr_evaluator.hpp  knowledgr_fwd.hpp  knowledgr_object_types.hpp  knowledgr_objects.hpp  node_property_object.hpp  notifications.hpp  pending_optional_action_object.hpp  pending_required_action_object.hpp  schema_types.hpp  shared_authority.hpp  shared_db_merkle.hpp  smt_objects.hpp  transaction_notification.hpp  transaction_object.hpp  witness_objects.hpp  witness_schedule.hpp
libraries/chain/include/knowledgr/chain/schema_types/: oid.hpp
libraries/chain/include/knowledgr/chain/smt_objects/: account_balance_object.hpp  nai_pool.hpp  nai_pool_object.hpp  smt_market_maker.hpp  smt_token_object.hpp
libraries/chain/include/knowledgr/chain/util/: advanced_benchmark_dumper.hpp  asset.hpp  impacted.hpp  manabar.hpp  nai_generator.hpp  rd_dynamics.hpp  rd_setup.hpp  reward.hpp  signal.hpp  smt_token.hpp  uint256.hpp
libraries/chain/smt_objects/: nai_pool.cpp  smt_market_maker.cpp
libraries/chain/util/: advanced_benchmark_dumper.cpp  impacted.cpp  rd.cpp  reward.cpp  smt_token.cpp
libraries/fc/: CMakeLists.txt
libraries/legacy_plugins/account_statistics/: CMakeLists.txt  account_statistics_api.cpp  account_statistics_plugin.cpp  plugin.json
libraries/legacy_plugins/account_statistics/include/colab/account_statistics/: account_statistics_api.hpp
libraries/legacy_plugins/account_statistics/include/knowledgr/account_statistics/: account_statistics_api.hpp  account_statistics_plugin.hpp
libraries/legacy_plugins/auth_util/: CMakeLists.txt  auth_util_api.cpp  auth_util_plugin.cpp  plugin.json
libraries/legacy_plugins/auth_util/include/knowledgr/plugins/auth_util/: auth_util_api.hpp  auth_util_plugin.hpp
libraries/legacy_plugins/block_info/: CMakeLists.txt  block_info_api.cpp  block_info_plugin.cpp  plugin.json
libraries/legacy_plugins/block_info/include/colab/plugins/block_info/: block_info_api.hpp  block_info_plugin.hpp
libraries/legacy_plugins/block_info/include/knowledgr/plugins/block_info/: block_info.hpp  block_info_api.hpp  block_info_plugin.hpp
libraries/legacy_plugins/blockchain_statistics/: CMakeLists.txt  blockchain_statistics_api.cpp  blockchain_statistics_plugin.cpp  plugin.json
libraries/legacy_plugins/blockchain_statistics/include/colab/blockchain_statistics/: blockchain_statistics_plugin.hpp
libraries/legacy_plugins/blockchain_statistics/include/knowledgr/blockchain_statistics/: blockchain_statistics_api.hpp  blockchain_statistics_plugin.hpp
libraries/legacy_plugins/delayed_node/: CMakeLists.txt  delayed_node_plugin.cpp  plugin.json
libraries/legacy_plugins/delayed_node/include/colab/delayed_node/: delayed_node_plugin.hpp
libraries/legacy_plugins/delayed_node/include/knowledgr/delayed_node/: delayed_node_plugin.hpp
libraries/legacy_plugins/private_message/: CMakeLists.txt  plugin.json  private_message_plugin.cpp
libraries/legacy_plugins/private_message/include/colab/private_message/: private_message_evaluators.hpp  private_message_operations.hpp  private_message_plugin.hpp
libraries/legacy_plugins/private_message/include/knowledgr/private_message/: private_message_evaluators.hpp  private_message_operations.hpp  private_message_plugin.hpp
libraries/legacy_plugins/raw_block/: CMakeLists.txt  plugin.json  raw_block_api.cpp  raw_block_plugin.cpp
libraries/legacy_plugins/raw_block/include/colab/plugins/raw_block/: raw_block_api.hpp  raw_block_plugin.hpp
libraries/legacy_plugins/raw_block/include/knowledgr/plugins/raw_block/: raw_block_api.hpp  raw_block_plugin.hpp
libraries/schema/: CMakeLists.txt  schema.cpp
libraries/schema/include/colab/schema/: schema.hpp  schema_types.hpp
libraries/schema/include/colab/schema/schema_types/: flat_set.hpp  pair.hpp  static_variant.hpp
libraries/schema/include/knowledgr/schema/: abstract_schema.hpp  schema.hpp  schema_impl.hpp  schema_types.hpp
libraries/schema/include/knowledgr/schema/schema_types/: flat_map.hpp  flat_set.hpp  pair.hpp  static_variant.hpp  vector.hpp
programs/: CMakeLists.txt
programs/knowledgrd/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  README.md
(+411 files in other folders)
